<resources>
    <string name="app_name">Give 10</string>
    <string name="action_settings">Settings</string>
    <string name="fab" />
    <string name="default_balance">$0.00</string>
    <string name="owed">owed</string>
    <string name="total_income">Total Income</string>
    <string name="income_num">$0.00</string>
    <string name="add_money">Add Money</string>
    <string name="give_charity">Give Charity</string>
    <string name="total_given">Total Given</string>
    <string name="given_num">$0.00</string>
    <string name="title_activity_add_income">Add Income</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="amount">Amount</string>
    <string name="date_format">mm/dd/yyyy</string>
    <string name="from_where">From where</string>
    <string name="date_received">Date received</string>
    <string name="title_activity_give_charity">Give Charity</string>
    <string name="to_where">To where</string>
    <string name="about_app">Give 10 is a charity tracking app that allows users to track how much Maaser Money they owe
    based on their income. \n\n The app calculates based on 10% requirement.
    User "adds money" upon receiving income and "gives charity". \n\nTotal owed is displayed on the home screen. User can view summary of
    their "transactions" as well.</string>
    <string name="transaction">Transaction</string>
    <string name="date">Date</string>
    <string name="title_activity_summary">Summary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="date_given">Date given</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save_transactions">Save Transactions</string>
    <string name="about">About</string>
    <string name="summary">Summary</string>
    <string name="key_auto_save">save_transactions_after_closing</string>
</resources>