<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    android:paddingTop="150dp">

    <com.google.android.material.card.MaterialCardView
        style="@style/main_card"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">


        <LinearLayout style="@style/main_card_ll">


            <TextView
                android:id="@+id/tv_total_income"
                style="@style/main_card_title"
                android:text="@string/total_income" />

            <TextView
                android:id="@+id/tv_total_income_num"
                style="@style/main_card_amount"
                android:text="@string/income_num" />

            <Button
                android:id="@+id/btn_add"
                style="@style/green_button"
                android:text="@string/add_money"
                android:onClick="openAddActivity"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/spacer"
        style="@style/card_spacer" />

    <com.google.android.material.card.MaterialCardView
        style="@style/main_card"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">


        <LinearLayout style="@style/main_card_ll">

            <TextView
                android:id="@+id/tv_total_given"
                style="@style/main_card_title"
                android:text="@string/total_given" />

            <TextView
                android:id="@+id/tv_total_given_num"
                style="@style/main_card_amount"
                android:text="@string/given_num" />

            <Button
                android:id="@+id/btn_give"
                style="@style/green_button"
                android:text="@string/give_charity"
                android:onClick="openGiveActivity"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.appcompat.widget.LinearLayoutCompat>